Bug 671904 - New Account Wizard bad-input warnings are unreadable (gray-on-black) in Ubuntu 11.04; r=andreasn

--- a/mail/themes/gnomestripe/mail/accountCreation.css
+++ b/mail/themes/gnomestripe/mail/accountCreation.css
@@ -5,10 +5,12 @@
 }
 
 .errordescription {
+  color: InfoText;
   background-color: InfoBackground;
   border-radius: 4px;
   margin-top: 3px;
   -moz-padding-start: 3px;
+  -moz-padding-end: 3px;
 }
 
 .initialDesc, .columnHeader {
